src/main/java/com/example/meditag/global/error/ErrorResponse.java
package com.example.meditag.global.error;

public class ErrorResponse {
}
